[package]
name = "lisnake"
version = "1.0.2"
description = "Snake for Project Lighthouse"
edition = "2021"
license = "MIT"
repository = "https://github.com/fwcd/lisnake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
lighthouse-client = "3.0.1"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
